# rosbag2_storage_mcap

./: .clang-format  .gitignore  .gitmodules  README.md
.github/workflows/: lint.yml  test.yml
cryptopp_vendor/: .gitignore  CMakeLists.txt  cryptopp_vendor-extras.cmake  package.xml
cryptopp_vendor/cmake/Modules/: FindCryptoPP.cmake
lz4_cmake_module/: CMakeLists.txt  lz4_cmake_module-extras.cmake  package.xml
lz4_cmake_module/cmake/Modules/: .gitignore
mcap_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
mcap_vendor/src/: main.cpp
rosbag2_storage_mcap/: .clang-format  CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_storage_mcap/include/rosbag2_storage_mcap/: buffered_writer.hpp  message_definition_cache.hpp  visibility_control.hpp
rosbag2_storage_mcap/src/: buffered_writer.cpp  mcap_storage.cpp  message_definition_cache.cpp  message_definition_cache.hpp
rosbag2_storage_mcap/test/rosbag2_storage_mcap/: test_mcap_storage.cpp  test_message_definition_cache.cpp
rosbag2_storage_mcap_test_fixture_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_storage_mcap_test_fixture_interfaces/msg/: BasicIdl.idl  ComplexIdl.idl  ComplexMsg.msg  ComplexMsgDependsOnIdl.msg
rosbag2_storage_mcap_testdata/: CHANGELOG.rst  package.xml
