<?xml version="1.0"?>
<package format="3">
  <name>lz4_cmake_module</name>
  <version>0.1.1</version>
  <description>Exports a CMake module to find LZ4.</description>

  <author email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</author>
  <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>

  <license>Apache License 2.0</license>
  <license>BSD</license> <!-- license of FindLZ4.cmake from https://github.com/Kitware/VTK.git -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
