<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcap_vendor</name>
  <version>0.0.1</version>
  <description>ROS2 vendor package for mcap</description>
  <maintainer email="daisuke.nishimatsu@tier4.jp">Daisuke Nishimatsu</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache License 2.0 -->

  <url type="website">https://github.com/foxglove/mcap</url>
  <author>John Hurliman</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>
  <buildtool_depend>python3-conan-pip</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
