<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcap_vendor</name>
  <version>0.1.1</version>
  <description>mcap vendor package</description>
  <maintainer email="john@foxglove.dev">John Hurliman</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>lz4_cmake_module</buildtool_depend>

  <depend>libzstd-dev</depend>
  <depend>lz4</depend>
  <depend>zstd_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
