<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag2_storage_mcap</name>
  <version>0.1.1</version>
  <description>rosbag2 storage plugin using the MCAP file format</description>
  <maintainer email="contact@foxglove.dev">Foxglove</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rcutils</depend>
  <depend>ros_environment</depend>
  <depend>rosbag2_storage</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
